third_party/rust/indoc/v1/crate/tests/ui/three-arguments.stderr
error: unexpected tokens in macro invocation; indoc argument must be a single string literal
 --> $DIR/three-arguments.rs:8:11
  |
8 |         " 64 128);
  |           ^^^^^^
