third_party/rust/indoc/v1/crate/tests/ui/three-arguments.rs
use indoc::indoc;

fn main() {
    indoc!("
        a
        b
        c
        " 64 128);
}
